...
                    horizontalArrangement = Arrangement.Center,
                    verticalAlignment = Alignment.CenterVertically,
                ) {
                    KakaoTalkIcon()
                    Spacer(modifier = Modifier.width(10.dp))
                    Text(
                        text = "카카오로 시작하기",
                        style = MaterialTheme.typography.labelLarge.copy(
                            fontSize = 13.sp,
                            lineHeight = 24.sp,
                            fontWeight = FontWeight.SemiBold,
                        ),
                    )
...
